src/kudu/util/env_posix.cc
@@ -39,6 +39,7 @@
 #include "kudu/util/env.h"
 #include "kudu/util/errno.h"
 #include "kudu/util/flag_tags.h"
+#include "kudu/util/fault_injection.h"
 #include "kudu/util/logging.h"
 #include "kudu/util/malloc.h"
 #include "kudu/util/monotime.h"
@@ -106,6 +107,10 @@ DEFINE_bool(never_fsync, false,
 TAG_FLAG(never_fsync, advanced);
 TAG_FLAG(never_fsync, unsafe);
 
+DEFINE_double(env_inject_io_error_on_write_or_preallocate, 0.0,
+              "Fraction of the time that write or preallocate operations will fail");
+TAG_FLAG(env_inject_io_error_on_write_or_preallocate, hidden);
+
 using base::subtle::Atomic64;
 using base::subtle::Barrier_AtomicIncrement;
 using std::string;
@@ -117,6 +122,8 @@ static __thread uint64_t thread_local_id;
 static Atomic64 cur_thread_local_id_;
 
 namespace kudu {
+
+const char* const Env::kInjectedFailureStatusMsg = "INJECTED FAILURE";
 
 namespace {
 
@@ -360,6 +367,9 @@ class PosixWritableFile : public WritableFile {
   }
 
   virtual Status PreAllocate(uint64_t size) OVERRIDE {
+    MAYBE_RETURN_FAILURE(FLAGS_env_inject_io_error_on_write_or_preallocate,
+                         Status::IOError(Env::kInjectedFailureStatusMsg));
+
     TRACE_EVENT1("io", "PosixWritableFile::PreAllocate", "path", filename_);
     ThreadRestrictions::AssertIOAllowed();
     uint64_t offset = std::max(filesize_, pre_allocated_size_);
@@ -453,6 +463,9 @@ class PosixWritableFile : public WritableFile {
 
   Status DoWritev(const vector<Slice>& data_vector,
                   size_t offset, size_t n) {
+    MAYBE_RETURN_FAILURE(FLAGS_env_inject_io_error_on_write_or_preallocate,
+                         Status::IOError(Env::kInjectedFailureStatusMsg));
+
     ThreadRestrictions::AssertIOAllowed();
 #if defined(__linux__)
     DCHECK_LE(n, IOV_MAX);
@@ -560,6 +573,9 @@ class PosixRWFile : public RWFile {
   }
 
   virtual Status Write(uint64_t offset, const Slice& data) OVERRIDE {
+    MAYBE_RETURN_FAILURE(FLAGS_env_inject_io_error_on_write_or_preallocate,
+                         Status::IOError(Env::kInjectedFailureStatusMsg));
+
     ThreadRestrictions::AssertIOAllowed();
     ssize_t written;
     RETRY_ON_EINTR(written, pwrite(fd_, data.data(), data.size(), offset));
@@ -581,6 +597,9 @@ class PosixRWFile : public RWFile {
   }
 
   virtual Status PreAllocate(uint64_t offset, size_t length) OVERRIDE {
+    MAYBE_RETURN_FAILURE(FLAGS_env_inject_io_error_on_write_or_preallocate,
+                         Status::IOError(Env::kInjectedFailureStatusMsg));
+
     TRACE_EVENT1("io", "PosixRWFile::PreAllocate", "path", filename_);
     ThreadRestrictions::AssertIOAllowed();
     if (fallocate(fd_, 0, offset, length) < 0) {
